--- a/style.css
+++ b/style.css
@@ -136,6 +136,7 @@ h3 {
 }
 
 .big-image {
+  box-sizing: border-box;
   width: 50%;
   padding-right: 30px;
 }
@@ -424,7 +425,7 @@ footer {
     height: 60%;
     width: 100%;
     align-self: center;
-    margin-left: 30px;
+    padding-right: 0;
   }
 
   h2 {
