--- a/code/style.css
+++ b/code/style.css
@@ -7,13 +7,11 @@
 
   --primary-font-color: #000000;
   --secondary-font-color: #5e5a5a;
-  --tertiary-font-color: #F3CCE6;
+  --tertiary-font-color: #f3cce6;
 
-  --primary-font-family: 'Tangerine', cursive;
-  --secondary-font-family: 'Cormorant', serif;
+  --primary-font-family: "Tangerine", cursive;
+  --secondary-font-family: "Cormorant", serif;
 }
-
-
 
 /* Global styling of links */
 
@@ -31,16 +29,12 @@ a:hover {
   text-decoration: underline;
 }
 
-
-
 /* BODY */
 
 body {
   margin: 0;
   background: var(--primary-background-color);
 }
-
-
 
 /* HEADER */
 
@@ -71,8 +65,6 @@ header {
   display: none;
 }
 
-
-
 /* LOGO & H1 SECTION */
 
 .logo-h1-container {
@@ -96,8 +88,6 @@ h1 {
   font-weight: 300;
   margin: 25px;
 }
-
-
 
 /* BIG NEWS SECTION */
 
@@ -124,14 +114,12 @@ h1 {
 .big-news-extract {
   font-family: var(--secondary-font-family);
   color: var(--primary-font-color);
-  font-size: 30px;
+  font-size: 28px;
   font-weight: 300;
   margin-right: 5%;
   margin-bottom: 10%;
   margin-left: 5%;
 }
-
-
 
 /*OTHER NEWS SECTION*/
 
@@ -167,14 +155,12 @@ h1 {
 .other-news-extract {
   font-family: var(--secondary-font-family);
   color: var(--primary-font-color);
-  font-size: 35px;
+  font-size: 30px;
   font-weight: 300;
   padding-right: 30px;
   padding-bottom: 40px;
   padding-left: 30px;
 }
-
-
 
 /* HR */
 
@@ -183,8 +169,6 @@ hr {
   justify-content: center;
   margin-top: 50px;
 }
-
-
 
 /*FOOTER*/
 
@@ -198,13 +182,7 @@ footer {
   text-align: center;
 }
 
-
-
-
-
 @media (min-width: 768px) {
-
-
   .hamburger {
     display: none;
   }
@@ -242,7 +220,6 @@ footer {
     margin-left: 5%;
   }
 
-
   .other-news-container {
     flex-direction: row;
     flex-wrap: wrap;
@@ -268,14 +245,9 @@ footer {
     margin-top: 50px;
     margin-bottom: 50px;
   }
-
 }
 
-
-
 @media (min-width: 992px) {
-
-
   .hamburger {
     display: none;
   }
@@ -285,7 +257,7 @@ footer {
   }
 
   .nav-link {
-    font-size: 35px;
+    font-size: 30px;
     margin-right: 0px;
   }
 
@@ -294,12 +266,12 @@ footer {
   }
 
   .logo {
-    width: 7%;
+    width: 5%;
     margin-left: 40px;
   }
 
   h1 {
-    font-size: 110px;
+    font-size: 100px;
   }
 
   .other-news-card {
@@ -321,29 +293,4 @@ footer {
     margin-top: 60px;
     margin-bottom: 60px;
   }
-
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
