--- a/code/style.css
+++ b/code/style.css
@@ -1,4 +1,158 @@
-html {
-  background: #0025ff;
-  color: #fff;
+
+*{
+border: 1px solid blue;
+}
+
+
+body {
+   font-family: Helvetica, sans-serif; 
+   color: black;
+   background-color: seashell;
+}
+
+a { 
+ text-decoration: none; 
+}
+
+a:hover{
+  color: lightseagreen;
+  cursor: pointer;
+}
+
+/* header -------------------------*/ 
+header{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+ 
+}
+
+.logo{
+display: flex;
+height: 60px;
+margin: 5px;
+gap: 0.5rem;
+align-items: center;
+
+}
+
+.logo img{
+   height: 100%;
+}
+
+.nav-bar{
+  display: flex;
+  gap: 1rem;
+  align-items: center;
+  background-color: mediumorchid;
+
+}
+
+.nav-bar img{
+  display: none
+
+}
+
+/* big-news -------------------------*/ 
+.big-news{
+  display: inline-flex;
+  margin: 0.5rem;
+  flex-direction: row;
+  background-color: mediumaquamarine;
+  align-items: center;
+
+}
+
+.big-image {
+   justify-content: center
+}
+
+.big-image img{
+ width: 100%;
+ height: auto;
+  
+}
+
+.big-text{
+  flex-wrap: wrap;
+  width: 100%;
+  min-width: 250px;
+  height: auto;
+  font-size: 2vw;
+  padding: 0.5rem;
+} 
+
+/* small-news -------------------------*/ 
+.small-news{
+  display: inline-flex;
+  align-items: center;
+  flex-direction: row;
+  flex-wrap: wrap;
+  margin: 2% 3%;
+
+}
+
+.small-square{
+  flex-direction: row;
+  flex-wrap: wrap;
+  margin: 10px;
+  max-width: 285px;
+}
+
+.small-img{ 
+  max-height: 200px;
+  max-width: 255px;
+  justify-content: space-around;
+  margin: 10px;
+}
+
+
+/*--------TABLET-------------*/
+@media screen and (max-width: 991px){
+.small-news{
+  justify-content: center;
+}
+
+.logo{
+  display: none
+}
+
+.nav-bar{
+  width: 100%;
+  height: 50px;
+  justify-content: space-around;
+}
+.nav-bar img{
+ display: block;
+ max-width: 50px;
+ max-height: 50px;
+}
+
+}
+
+
+/*--------PHONE-------------*/
+@media screen and (max-width: 767px){
+.big-news{
+ flex-wrap: wrap;
+}
+
+.big-text p{
+  display: none;
+}
+
+.nav-bar{
+display: none;
+}
+
+.logo{
+  display: flex;
+  font-size: 50%;
+  height: 30px;
+}
+
+.logo img{
+   height: 50%;
+}
+
 }
