added all content

--- a/code/style.css
+++ b/code/style.css
@@ -1,4 +1,30 @@
 html {
-  background: #0025ff;
-  color: #fff;
+  background: #cbdee7;
+  color: rgb(56, 54, 54);
+}
+
+h1 {
+  font-size: 50px;
+  background-color: white;
+  padding: 20px;
+  color: grey;
+}
+.seagull {
+  width: 50px;
+}
+
+.dead-bird {
+  width: 200px;
+}
+
+.world-map {
+  width: 100px;
+}
+
+.owl {
+  width: 100px;
+}
+
+.birds-without-borders-pic {
+  width: 100px;
 }
