--- a/code/style.css
+++ b/code/style.css
@@ -1,4 +1,274 @@
-html {
-  background: #0025ff;
-  color: #fff;
+@import url("https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+
+body {
+  margin: 0;
+  padding: 0;
+  font-family: "Raleway", sans-serif;
+  background-color: rgb(240, 236, 236);
+}
+
+.header-mobile {
+  background-color: rgba(209, 208, 208, 0.95);
+  display: block;
+  height: 60px;
+  display: flex;
+  align-items: center;
+  position: sticky;
+  top: 0;
+}
+
+.header-ipad {
+  display: none;
+  background-color: rgba(209, 208, 208, 0.95);
+  height: 60px;
+  align-items: center;
+  justify-content: space-evenly;
+  position: sticky;
+  top: 0;
+}
+
+.header-desktop {
+  display: none;
+  background-color: rgba(209, 208, 208, 0.95);
+  height: 60px;
+  align-items: center;
+  justify-content: space-between;
+  position: sticky;
+  top: 0;
+}
+
+.menu-container {
+  display: flex;
+  column-gap: 14px;
+}
+
+.icon-and-text {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+}
+
+.header-desktop {
+  display: none;
+}
+
+h3 {
+  margin-bottom: 4px;
+}
+
+a {
+  text-decoration: none;
+  color: black;
+}
+
+a:hover {
+  color: rgb(32, 143, 137);
+}
+
+.logotype {
+  padding-left: 10px;
+}
+
+.bold {
+  font-weight: 700;
+  font-size: 28px;
+}
+
+.thin {
+  font-weight: 300;
+  font-size: 28px;
+}
+
+.big-news-container {
+  display: flex;
+  flex-direction: column;
+}
+
+.big-news-image {
+  max-width: 100%;
+  height: auto;
+  box-shadow: 10px 10px 5px grey;
+}
+
+.big-news-text-container {
+  padding: 0px 10px 20px 10px;
+}
+.other-news-container {
+  display: flex;
+  flex-direction: column;
+  max-width: 100%;
+}
+
+.other-news {
+  background-color: rgb(240, 236, 236);
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  margin: 0px 0px 20px 0px;
+}
+
+.other-news-pictures {
+  height: 130px;
+  max-width: 50%;
+  flex: 1;
+  padding: 0px 10px 0px 10px;
+  object-fit: cover;
+}
+
+.other-news-text-container {
+  display: flex;
+  flex-direction: column;
+  padding: 0px 10px 0px 10px;
+  flex: 1;
+  height: 130px;
+}
+
+.other-news-bold {
+  font-weight: 700;
+  font-size: 13px;
+}
+
+.other-news-thin {
+  font-weight: 400;
+  font-size: 13px;
+}
+
+@media only screen and (min-device-width: 668px) and (max-device-width: 1024px) {
+  .header-mobile {
+    display: none;
+  }
+
+  .header-ipad {
+    display: flex;
+  }
+
+  .header-desktop {
+    display: none;
+  }
+  .big-news-container {
+    display: flex;
+    flex-direction: row;
+    margin-bottom: 30px;
+  }
+
+  .big-news-image {
+    flex: 1;
+    height: 385px;
+    object-fit: cover;
+  }
+
+  .big-news-text-container {
+    flex: 1;
+    padding: 0px 20px 0px 20px;
+  }
+
+  .other-news {
+    display: flex;
+    flex-direction: column;
+    width: auto;
+    max-width: none;
+  }
+
+  .other-news-container {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+  }
+
+  .other-news-pictures {
+    max-width: 100%;
+    max-height: 200px;
+    object-fit: cover;
+    margin-top: 10px;
+  }
+  .other-news-text-container {
+    max-width: 300px;
+    margin-top: 10px;
+    height: auto;
+  }
+
+  .item-2,
+  .item-4,
+  .item-6 {
+    flex-direction: column-reverse;
+  }
+}
+
+@media only screen and (min-device-width: 1025px) {
+  body {
+    background-color: rgb(236, 230, 226);
+    display: flex;
+    justify-content: center;
+  }
+
+  .header-mobile {
+    display: none;
+  }
+
+  .header-ipad {
+    display: none;
+  }
+
+  .header-desktop {
+    display: flex;
+    max-width: 1700px;
+  }
+
+  .big-news-container {
+    display: flex;
+    flex-direction: row;
+    max-width: 1700px;
+    background-color: rgb(240, 236, 236);
+  }
+
+  .big-news-image {
+    max-width: 100%;
+    min-width: 450px;
+  }
+
+  .big-news-text-container {
+    max-width: 100%;
+    min-width: 450px;
+    flex: 1;
+  }
+
+  .other-news-container {
+    background-color: rgb(240, 236, 236);
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    max-width: 1700px;
+  }
+
+  .other-news {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .other-news-pictures {
+    max-width: 400px;
+    max-height: 300px;
+    object-fit: cover;
+    margin-top: 30px;
+  }
+  .other-news-text-container {
+    max-width: 400px;
+    margin-top: 10px;
+  }
+
+  .item-2,
+  .item-4,
+  .item-6 {
+    flex-direction: column-reverse;
+  }
+
+  .other-news-bold {
+    font-size: 20px;
+  }
+
+  .other-news-thin {
+    font-size: 20px;
+  }
 }
