--- a/code/style.css
+++ b/code/style.css
@@ -6,34 +6,30 @@ body {
   font-family: 'Barlow', serif;
   color: rgb(0, 0, 0);
   margin:0;
+  align-items: center;
+  width: 70rem;
+  margin: auto;
 }
 
 header {
-  background: #cacacc;
-  color: #fff;
-  width: 100%; 
-  height: 5%;
   display: flex;
   justify-content: space-between;
   position: sticky;
   top: 0;
-  left:0;
-}
-
-.logo-img {
-  margin: 2%; 
+  border-bottom-style: solid;
+  height: 7rem;
+  margin-bottom: 2rem;
+  background: #f7f7f7;
 }
 
 .logo-headline, .navigation {
   display: flex;
   align-items: center;
-  margin-left: 1em;
-
 }
 
 .navigation-link {
   width: auto;
-  margin: 10px;
+  margin: 1rem;
 }
 
 h1, h2, h3 {
@@ -44,10 +40,24 @@ h1, h2, h3 {
 .news-snippets {
   display: grid;
   grid-gap: 1rem;
-  grid-template-columns: repeat(auto-fill, minmax(15rem, 1fr));
+  grid-template-columns: repeat(4, 1fr);
+  /*grid-template-columns: repeat(auto-fill, minmax(15rem, 1fr));*/
+}
+
+.news-snippets img {
+  width: 15rem;
+  height: 10rem;
+  object-fit: cover;
+  border-radius: 10%;
 }
 
 footer {
   background: #cacacc;
   color: #fff;
+}
+
+@media all and (max-width: 767px) {
+  .news-snippets {
+    grid-template-columns: 1fr;
+  }
 }
