--- a/code/style.css
+++ b/code/style.css
@@ -1,4 +1,70 @@
-html {
-  background: #0025ff;
-  color: #fff;
+* {
+  max-width: 100%;
+  margin: 0;
+}
+body {
+  background-color: #F3F0D7;
+}
+.header {
+  display: flex;
+  
+  
+}
+.logo {
+  width: 50px;
+}
+.navbar {
+  display: none;
+  float: right;
+  padding: 3em;
+}
+.site-name {
+  display: flex;
+  font-family: 'Cinzel', serif;
+}
+.big-news {
+  display: flex;
+  flex-direction: column;
+}
+
+/*Mobile first!*/
+@media(min-width: 768px) {
+  .site-name {
+    display: none;
+  }
+  .logo {
+    display: flex;
+  }
+}
+
+@media (min-width: 992px) {
+  .header{
+    display: flex;
+    justify-content: space-between;
+
+  }
+  .logo {
+    width: 60px;
+  }
+  .site-name {
+    display: flex;
+    margin-top: 1em;
+    
+
+  }
+  .navbar {
+    display: flex;
+    margin-right: 0;
+    
+  }
+ .navbar a {
+   float: right;
+   padding-right: 3em;
+ } 
+ 
+ .big-news{
+  flex-direction: row;
+  justify-content: space-between;
+
+}
 }
