--- a/code/style.css
+++ b/code/style.css
@@ -51,7 +51,7 @@ body {
 }
 
 body {
-  background: linear-gradient(-90deg, #23d5ab, #fff000, #97ff00, #23a6d5);
+  background: linear-gradient(45deg, #23d5ab, #fff000, #97ff00, #23a6d5);
   background-size: 400% 400%;
   animation: gradient 10s ease infinite;
   height: 100vh;
@@ -74,7 +74,7 @@ body {
   max-width: 1200px;
   margin: 0 auto;
   margin-top: 10px;
-  margin-bottom: 10px;
+  margin-bottom: 20px;
   box-shadow: 5px 5px black;
 }
 
@@ -163,6 +163,7 @@ body {
 .main__section div h3 {
   padding: 3px 0px;
   display: block;
+  text-align: center;
 }
 
 .main__section div p {
@@ -172,8 +173,8 @@ body {
 
 .main__section div h2,
 .main__section div h3 {
-  font-size: 13px;
-  line-height: 17px;
+  font-size: 16px;
+  line-height: 20px;
 }
 
 .main__footer {
@@ -183,11 +184,12 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 30px;
+  align-content: center;
+  padding: 10px;
 }
 
 .main__footer div {
-  padding: 30px;
+  padding: 10px;
 }
 
 .main__footer div i {
@@ -208,6 +210,7 @@ body {
   .main__section div h2,
   .main__section div h3 {
     padding: 3px 0px;
+    text-align: left;
   }
 
   .my__nav {
@@ -289,7 +292,19 @@ body {
 
   .main__footer {
     min-height: 150px;
-    width: 100%;
+    background: white;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  
+  .main__footer div {
+    padding: 15px;
+  }
+  
+  .main__footer div i {
+    margin: 0px 10px;
+    font-size: 20px;
   }
 
   .main__header h1 {
