--- a/code/style.css
+++ b/code/style.css
@@ -7,6 +7,7 @@ body {
   padding: 1rem;
 }
 .header {
+  display: flex;
   height: 80px; 
 }
 .logo {
@@ -39,11 +40,11 @@ body {
     background-color: violet;
     padding: 20px;
   }
-  .big-news-images {
+  .big-news-image {
     width: 50%;
   }
   .big-news-text {
-    width: 50%;
+    width: 2000px;
   }
 }
 
