--- a/code/style.css
+++ b/code/style.css
@@ -80,7 +80,7 @@ a:hover {
   background-color: rgb(240, 236, 236);
   display: flex;
   flex-direction: row;
-  justify-content: center;
+  justify-content: flex-start;
   margin: 0px 0px 20px 0px;
 }
 
