--- a/code/style.css
+++ b/code/style.css
@@ -1,4 +1,353 @@
-html {
-  background: #0025ff;
-  color: #fff;
+body {
+    font-family: 'Inconsolata', monospace;
+    font-family: 'Mukta Vaani', sans-serif;
+    margin: 0;
 }
+
+.main-grid {
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
+}
+
+.header {
+    grid-column: span 12;
+    color: black;
+    padding: 5px;
+    text-transform: uppercase;
+    font-weight: 300;
+    letter-spacing: 3px;
+}
+
+.header ul {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    overflow: hidden;
+    background-color: #fff;
+}
+
+.header li a {
+    display: block;
+    padding: 10px 20px;
+    text-decoration: none;
+}
+
+/* nav start */
+
+.header a {
+    color: black;
+}
+
+.menu a:hover {
+    color: red;
+}
+
+.header .menu {
+    clear: both;
+    max-height: 0;
+    transition: max-height .2s ease-out;
+}
+
+.header .logo {
+    display: block;
+    float: left;
+    font-size: 22px;
+    padding: 3px 3px 3px 3px;
+    text-decoration: none;
+}
+
+.header .menu-icon {
+    cursor: pointer;
+    float: right;
+    padding: 28px 20px;
+    position: relative;
+    user-select: none;
+}
+
+.header .menu-icon .navicon {
+    background: #333;
+    display: block;
+    height: 2px;
+    position: relative;
+    transition: background .2s ease-out;
+    width: 18px;
+}
+
+.header .menu-icon .navicon:before, .header .menu-icon .navicon:after {
+    background: #333;
+    content: '';
+    display: block;
+    height: 100%;
+    position: absolute;
+    transition: all .2s ease-out;
+    width: 100%;
+}
+
+.header .menu-icon .navicon:before {
+    top: 5px;
+}
+
+.header .menu-icon .navicon:after {
+    top: -5px;
+}
+
+.header .menu-btn {
+    display: none;
+}
+
+.header .menu-btn:checked~.menu {
+    max-height: 200px;
+}
+
+.header .menu-btn:checked~.menu-icon .navicon {
+    background: transparent;
+}
+
+.header .menu-btn:checked~.menu-icon .navicon:before {
+    transform: rotate(-45deg);
+}
+
+.header .menu-btn:checked~.menu-icon .navicon:after {
+    transform: rotate(45deg);
+}
+
+.header .menu-btn:checked~.menu-icon:not(.steps) .navicon:before, .header .menu-btn:checked~.menu-icon:not(.steps) .navicon:after {
+    top: 0;
+}
+
+/* nav end */
+
+img {
+    width: 100%;
+    height: 100%;
+}
+
+.hero-image {
+    grid-column: span 12;
+    display: none;
+}
+
+.grid-container {
+    grid-column: span 12;
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
+    column-gap: 1em;
+    row-gap: 1em;
+}
+
+.main-article {
+    margin-top: 30px;
+    min-height: 250px;
+    grid-column: span 12;
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
+}
+
+.main-article-image {
+    grid-column: span 12;
+}
+
+.main-article-image img {
+    object-fit: cover;
+}
+
+.main-article-ingress {
+    background-color: white;
+    grid-column: span 12;
+}
+
+.card-text {
+    height: auto;
+    background-color: white;
+    color: black;
+    padding: 2px 2px;
+    text-align: center;
+    font-family: Mukta Vaani;
+    font-weight: 200;
+    font-size: 10px;
+    cursor: pointer;
+}
+
+.border {
+    position: absolute;
+    background: none;
+    transition: all .5s ease-in-out;
+}
+
+.card .border:nth-of-type(1) {
+    top: 0;
+    left: 0;
+    border-left: 1px solid red;
+    border-top: 1px solid red;
+    width: 30px;
+    height: 30px;
+}
+
+.card .border:nth-of-type(2) {
+    bottom: 0;
+    right: 0;
+    border-right: 1px solid red;
+    border-bottom: 1px solid red;
+    width: 30px;
+    height: 30px;
+}
+
+.card:hover .border {
+    width: 102%;
+    height: 105%;
+}
+
+h2 {
+    font-size: 25px;
+    font-weight: 300;
+    text-align: center;
+    letter-spacing: 4px;
+    text-transform: uppercase;
+}
+
+h3 {
+    font-size: 15px;
+    font-weight: 300;
+    text-transform: uppercase;
+}
+
+p {
+    font-size: 14px;
+    font-weight: 200;
+    font-family: Mukta Vaani;
+    text-align: center;
+    vertical-align: middle;
+    padding: 5px 30px 8px 20px;
+}
+
+.wrapper-card {
+    grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
+    grid-column: span 12;
+    display: grid;
+    gap: 15px;
+    padding-top: 15px;
+}
+
+.card {
+    margin-bottom: 25px;
+    grid-column: span 1;
+    position: relative;
+    box-shadow: 10px 5px 5px rgb(205, 205, 205);
+}
+
+.card .content {
+    width: 100%;
+    height: 80%;
+    transition: transform 1.5s;
+    transform-style: preserve-3d;
+}
+
+.card img {
+    object-fit: cover;
+}
+
+.page-footer {
+    margin-top: 30px;
+    row-gap: 2em;
+    min-height: 100px;
+    background-color: #000000;
+    grid-column: span 12;
+    color: white;
+    text-align: center;
+    flex-direction: row;
+}
+
+.page-footer .footer-legal a {
+    padding: 0 20px 0 0;
+    display: inline-block;
+    list-style-type: none;
+    font-size: 15px;
+    font-weight: 300;
+    text-decoration: none;
+}
+
+.page-footer .footer-legal li {
+    display: inline-block;
+    list-style-type: none;
+    color: white;
+    font-size: 15px;
+    font-weight:lighter
+}
+
+.page-footer a:any-link {
+    color: rgb(255, 255, 255);
+    text-decoration: none;
+}
+
+.page-footer a:hover {
+    text-decoration: underline;
+}
+
+/* tablet */
+
+@media (min-width: 768px) {
+    .card {
+        grid-column: span 1;
+        box-shadow: 10px 5px 5px rgb(205, 205, 205);
+    }
+    .main-article-image {
+        grid-column: span 8;
+        object-fit: f;
+    }
+    .main-article-ingress {
+        grid-column: span 4;
+        border-top: 1px solid rgb(0, 0, 0);
+        border-bottom: 1px solid rgb(0, 0, 0);
+        margin-left: 10px;
+        margin-right: 10px;
+    }
+}
+
+/* desktop */
+
+@media (min-width: 960px) {
+    .grid-container {
+        grid-column-start: 2;
+        grid-column-end: 12;
+    }
+    .card {
+        grid-column: span 1;
+        box-shadow: none;       
+        }      
+        
+        .main-article-ingress {
+            background-color: white;
+            border-top: 1px solid rgb(0, 0, 0);
+            border-bottom: 1px solid rgb(0, 0, 0);
+            grid-column: span 4;
+            margin-left: 10px;
+        }
+        .header {
+            grid-column-start: 2;
+            grid-column-end: 12;
+        }
+        .header li {
+            float: left;
+        }
+        .header li a {
+            padding: 20px 15px;
+        }
+        .header .menu {
+            clear: none;
+            float: right;
+            max-height: none;
+        }
+        .header .menu-icon {
+            display: none;
+        }
+        .hero-image {
+            display: inline;
+        }
+        .header .logo {
+            display: block;
+            float: left;
+            font-size: 2em;
+            padding: 10px 20px;
+            text-decoration: none;
+        }
+    }
