--- a/code/style.css
+++ b/code/style.css
@@ -24,14 +24,30 @@ header {
   display: flex;
   flex-direction: column;
 }
+/*Grid collumn for the small articles*/
+.small-news {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  padding: 20px;
+}
+.article {
+  grid-column: span 4;
+  padding: 5px;
+}
+footer {
+  background-color: black;
+  font-size: 30px;
+  color: white;
+  text-align: center;
+}
 /*Mobile first!*/
 @media(min-width: 768px) {
   .site-name {
     display: none;
   }
+
   .big-news {
     flex-direction: row;
-    /*width: 100%;*/
     background-color: violet;
     padding: 20px;
   }
@@ -41,6 +57,9 @@ header {
   .big-news-text {
     width: 50%;
   }
+  .article {
+    grid-column: span 2;
+  }
 }
 
 @media (min-width: 992px) {
@@ -49,22 +68,23 @@ header {
   }
   .site-name {
     display: flex;
-    width: 50%;
+    width: 20%;
   }
   .navbar {
     display: flex;
-    width: 50%;
+    width: 80%;
     justify-content: flex-end;
     background-color: teal;  
   }
  .navbar a {
-   padding-left: 6em;
+   padding-left: 8rem;
+   margin-right: 10px;
  } 
- 
  .big-news{
   flex-direction: row;
-  justify-content: space-between;
-
+ }
+ .article {
+  grid-column: span 1;
 }
 }
 
