--- a/code/style.css
+++ b/code/style.css
@@ -116,9 +116,8 @@ a:hover {
 
 .daily-polaroid-container {
   display: flex;
-  flex-direction: row;
   justify-content: center;
-  flex-wrap: wrap;
+  flex-flow: row wrap;
 }
 
 .daily-polaroid-header {
@@ -211,8 +210,7 @@ a:hover {
 
   .other-news-container {
     display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
+    flex-flow: row wrap;
     justify-content: space-evenly;
   }
 
@@ -297,8 +295,7 @@ a:hover {
   .other-news-container {
     background-color: rgb(240, 236, 236);
     display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
+    flex-flow: row wrap;
     justify-content: space-around;
     max-width: 1700px;
   }
