--- a/code/style.css
+++ b/code/style.css
@@ -36,13 +36,12 @@ text-decoration: underline;
 /* main news */
 .big-news {
   display: flex;
-  flex-direction: row;
   animation: start 2s ease-in-out;
 }
 
 .big-news-img {
   width: 40%;
-  margin: 10px;
+  margin-bottom: 10px;
   box-shadow: 2px 6px 4px rgba(0,0,0,0.9);
 }
 
@@ -50,12 +49,17 @@ text-decoration: underline;
   opacity: 0.7;
 }
 
-.big-news p {
+.big-news .intro {
   display: flex;
+  justify-content: center;
   align-items: center;
+  flex-direction: column;
   color: red;
   max-width: 60%;
+  text-align: center;
 }
+
+
 
 .container {
   border: 2px solid black;
@@ -184,7 +188,7 @@ footer a:hover {
     box-shadow: 0 6px 4px rgba(0,0,0,0.6);
   }
 
-  .big-news p {
+  .big-news .intro {
     font-size: 1.5em;
     min-width: 100%;
     padding: 0 5px 0 5px;
