--- a/code/style.css
+++ b/code/style.css
@@ -1,17 +1,14 @@
 
-*{
-border: 1px solid blue;
-}
-
-
 body {
    font-family: Helvetica, sans-serif; 
    color: black;
    background-color: seashell;
+   margin: 0px;
 }
 
 a { 
  text-decoration: none; 
+  color: black;
 }
 
 a:hover{
@@ -19,140 +16,225 @@ a:hover{
   cursor: pointer;
 }
 
+
+
 /* header -------------------------*/ 
 header{
   display: flex;
   justify-content: space-between;
-  align-items: center;
+  background-color:rgb(185, 178, 74);
+  height: 60px;
+
  
+}
+.nav-bar{
+  display: none;
+  align-items: center;
+  width: 100%;
+  height: 60px;
+
 }
 
 .logo{
-display: flex;
-height: 60px;
-margin: 5px;
-gap: 0.5rem;
-align-items: center;
-
-}
-
-.logo img{
-   height: 100%;
-}
-
-.nav-bar{
-  display: flex;
-  gap: 1rem;
+  display: inline-flex;
   align-items: center;
-  background-color: mediumorchid;
-
+  width: 100%;
+  height: 60px;
 }
 
-.nav-bar img{
-  display: none
+.logo-img{
+   height: 55%;
+   border-radius: 33%;
+   padding: 5px;
+   background-color:orange;
+   margin: 0.5rem;
+   box-shadow: 0px 0px 5px 1px black;
+}
 
+.logo h1{
+   width: 100%;
+   font-size: 1.5rem;
+}
+
+.animation{
+  border: 1px solid red;
+  display: flex;
+  height: 60px;
+  flex-wrap: wrap;
+  width: 100%;
+  font-size: 0.5rem;
+  align-items: center;
+  justify-content: center;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  animation-name: subscribe;
+  animation-duration: 7s;
+  animation-delay: 2s;
+  animation-iteration-count: infinite;
+}
+
+@keyframes subscribe {
+  from {
+    background-color: rgb(138, 43, 138);
+    opacity: 0}
+  to {
+    background-color: lime;
+    opacity: 1;
+  }
 }
 
 /* big-news -------------------------*/ 
 .big-news{
-  display: inline-flex;
-  margin: 0.5rem;
-  flex-direction: row;
-  background-color: mediumaquamarine;
+  margin: 0rem 0.5rem 0.5rem 0.5rem;
   align-items: center;
+  box-shadow: 0px 0px 5px 1px black;
+  flex-shrink: 1;
 
 }
 
 .big-image {
-   justify-content: center
+   justify-content: center;
+  
 }
 
 .big-image img{
  width: 100%;
  height: auto;
-  
+ border: 1px solid lightgrey;
+ vertical-align: middle;
 }
 
 .big-text{
   flex-wrap: wrap;
-  width: 100%;
-  min-width: 250px;
-  height: auto;
   font-size: 2vw;
-  padding: 0.5rem;
+  padding: 1rem;
 } 
+
+.big-text h1{
+  margin: 0px 5px 5px 5px;
+}
+
+.big-text p{
+  display: none;
+   margin: 0px
+}
+
 
 /* small-news -------------------------*/ 
 .small-news{
   display: inline-flex;
   align-items: center;
   flex-direction: row;
+  justify-content: center;
   flex-wrap: wrap;
-  margin: 2% 3%;
-
 }
 
 .small-square{
   flex-direction: row;
   flex-wrap: wrap;
-  margin: 10px;
-  max-width: 285px;
+  justify-content: center;
+  margin: 15px;
+  width: 285px;
+  height: 250px;
+  font-size: 60%;
+  overflow: hidden;
+  box-shadow: 0px 0px 5px 1px gray;
+}
+
+.small-square:hover{
+ box-shadow: 0px 0px 5px 1px black;
 }
 
 .small-img{ 
-  max-height: 200px;
-  max-width: 255px;
-  justify-content: space-around;
+  height: 100%;
+  width: 100%;
+  object-fit: contain;
+}
+
+.small-img-container{
+  height: 165px;
+  width: 262px;
   margin: 10px;
 }
 
-
-/*--------TABLET-------------*/
-@media screen and (max-width: 991px){
-.small-news{
-  justify-content: center;
+.small-img-container:hover{
+  height: 170px;
+  width: 270px;
+  margin: 8px;
 }
 
+.small-text {
+margin: 5px 10px;
+}
+
+
+.small-text h3, h2{
+  margin: 5px;
+}
+
+
+/* -------footer------ */
+footer{
+background-color: rgb(138, 132, 56);
+display: flex;
+justify-content: center;
+font-size: small;
+font-style: italic;
+}
+
+
+
+
+
+/*--------TABLET - mobile first-------------*/
+@media screen and (min-width: 767px){
 .logo{
-  display: none
+  display: none 
+} 
+
+.nav-bar{
+  display: inline-flex;
+  justify-content: space-around;
+}
+
+.logo-img{
+ display: block;
+}
+
+.big-news{
+  display: inline-flex;
+}
+  
+.big-image img{
+  border: 1px solid blue;
+   
+}
+.big-text p {
+  display: flex;
+}
+
+.animation{
+  font-size: 0.7rem;
+
+}
+
+}
+
+/*--------DESKTOP - mobile first-------------*/
+@media screen and (min-width: 991px){
+.logo{
+  display: flex;
 }
 
 .nav-bar{
-  width: 100%;
-  height: 50px;
-  justify-content: space-around;
+  display: flex;
+  gap: 1rem;
+  align-items: center;
 }
+
 .nav-bar img{
- display: block;
- max-width: 50px;
- max-height: 50px;
-}
-
-}
-
-
-/*--------PHONE-------------*/
-@media screen and (max-width: 767px){
-.big-news{
- flex-wrap: wrap;
-}
-
-.big-text p{
   display: none;
 }
 
-.nav-bar{
-display: none;
 }
 
-.logo{
-  display: flex;
-  font-size: 50%;
-  height: 30px;
-}
 
-.logo img{
-   height: 50%;
-}
-
-}
